--- a/modus/src/components/Message.css
+++ b/modus/src/components/Message.css
@@ -21,13 +21,15 @@
 .message__avatar {
   display: flex;
   align-items: center;
-  width: 40px;
+  width: auto; /* Allow the container to adjust width */
   height: 40px;
   margin-bottom: 7px;
 }
 
 .username {
   margin-left: 8px;
+  flex-grow: 1; /* Allow the username to take up available space */
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 .username--clicked {
@@ -38,7 +40,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50%; 
-  border: 2px solid #555; 
+  border: 1px solid #555; 
 }
 
 .message__body p {
@@ -80,7 +82,6 @@
 .copy-button:hover {
   background-color: #005a9e;
 }
-
 
 /* Syntax highlighting overrides for dark theme */
 .code__container pre {
