progress bar added

--- a/modus/src/App.css
+++ b/modus/src/App.css
@@ -1,4 +1,4 @@
-.main__container{
+.main__container {
     height: 100vh;
     width: 100%;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -14,6 +14,7 @@
     scrollbar-color: #555 #1e1e1e;
     display: flex;
     flex-direction: column;
+    overflow-y: auto; /* Ensure vertical scrolling */
 }
 
 /* Custom scrollbar for WebKit-based browsers (Chrome, Safari, Edge) */
@@ -34,15 +35,20 @@
     background-color: #1e1e1e; 
 }
 
+.message__chatbox::-webkit-scrollbar-button {
+    display: none; /* Hides the arrows */
+}
 
 .message-display {
     text-align: center;
     margin-top: 20px;
 }
+
 .message-display h2 {
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
+
 .message-display p {
     font-size: 1.2rem;
     color: #555;
