--- a/modus/src/components/Footer.css
+++ b/modus/src/components/Footer.css
@@ -25,6 +25,22 @@
     position: relative;
 }
 
+.footer__container.focused {
+    border: 1px solid #0f8cdf; /* VS Code blue */
+}
+
+.progress-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0; /* Start with 0 width */
+    height: 3px;
+    background-color: #007acc; /* Modus blue */
+    box-shadow: 0 0 10px #007acc; /* Neon glow effect */
+    transition: width 0.6s ease;
+  }
+
+  
 .input-container {
     display: flex;
     align-items: center;
