--- a/modus/src/components/Footer.css
+++ b/modus/src/components/Footer.css
@@ -88,13 +88,12 @@
 
 .input-actions button img {
     height: 20px;
-    filter: invert(90%);
 }
 
 .toolbar button img {
     margin: 2px;
     height: 15px;
-    filter: invert(90%);
+    filter: invert(95%);
 }
 
 .toolbar button {
@@ -139,7 +138,6 @@
     background: none;
     border: none;
     color: #ffffff;
-    font-size: 18px;
     cursor: pointer;
 }
 
@@ -152,15 +150,13 @@
     border-radius: 0;
 }
 
-/* Default styles for file__container */
 .file__container {
     padding: 4px;
     width: 100%;
-    transition: box-shadow 0.3s ease; /* Smooth transition for shadow */
+    transition: box-shadow 0.3s ease; 
     display: flex;
 }
 
-/* Add shadow only to the bottom */
 .file__container.shadow {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Bottom shadow only */
 }
@@ -183,13 +179,13 @@
     position: relative;
   }
   
-  .model_selection button {
+.model_selection button {
     display: flex;
     align-items: center;
     background: none;
     border: none;
     cursor: pointer;
-  }
+}
   
   .dropdown-menu {
     position: absolute;
@@ -220,6 +216,23 @@
 
   pre code.hljs{
     padding: 0.4rem 0.5rem 0.5rem 0.5rem !important;
+  }
+
+
+  .login-button{
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 11px !important;
+    transition: background-color 0.3s ease;
+  }
+
+
+  .disabled-icon {
+    opacity: 0.5;
+    pointer-events: none;
   }
 
 
