--- a/modus/src/components/Banner.css
+++ b/modus/src/components/Banner.css
@@ -1,8 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #181818;
+    background-color: var(--vscode-sideBar-background); /* Use the sidebar background color */
 }
+
 
 .banner{
     flex: 1;
@@ -12,6 +13,7 @@ body {
     text-align: center;
     height: 100%;
     padding :20px;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .logo{
