--- a/modus/src/components/Footer.css
+++ b/modus/src/components/Footer.css
@@ -8,14 +8,15 @@
     bottom: 0; 
     left: 0;
     right: 0;
-    background-color: #181818; 
+    background-color: var(--vscode-sideBar-background);; /* Editor background color */
     z-index: 10; 
     justify-content: center;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .footer__container {
-    background-color: #313131;
-    border: 1px solid #686767a1;
+    background-color: var(--vscode-editor-background); /* Editor background color */
+    border: 1px solid var(--vscode-editorLineNumber-foreground); /* Line number foreground color */
     border-radius: 5px;
     padding: 10px;
     width: calc(100% - 20px);
@@ -26,21 +27,20 @@
 }
 
 .footer__container.focused {
-    border: 1px solid #0f8cdf; /* VS Code blue */
+    border: 1px solid var(--vscode-focusBorder); /* Focus border color */
 }
 
 .progress-bar {
     position: absolute;
     top: 0;
     left: 0;
-    width: 0; /* Start with 0 width */
+    width: 0; 
     height: 2px;
-    background-color: #007acc; /* Modus blue */
-    box-shadow: 0 0 10px #007acc; /* Neon glow effect */
+    background-color: var(--vscode-progressBar-background); 
+    box-shadow: 0 0 10px var(--vscode-progressBar-background); 
     transition: width 0.6s ease;
-  }
+}
 
-  
 .input-container {
     display: flex;
     align-items: center;
@@ -53,8 +53,8 @@
     flex-grow: 1;
     padding: 7px;
     border-radius: 4px;
-    background-color: #313131;
-    color: #ffffff;
+    background-color: var(--vscode-editor-background); /* Editor background color */
+    color: var(--vscode-editor-foreground); /* Editor foreground color */
     width: 100%;
     box-sizing: border-box;
     outline: none;
@@ -73,14 +73,14 @@
     align-items: center;
 }
 
-.input-actions{
+.input-actions {
     display: flex;
 }
 
 .input-actions button {
     background: none;
     border: none;
-    color: #ffffff;
+    color: var(--vscode-editor-foreground); /* Editor foreground color */
     font-size: 18px;
     margin-left: 10px;
     cursor: pointer;
@@ -104,7 +104,7 @@
 }
 
 .toolbar button:hover {
-    background-color: #545554;
+    background-color: var(--vscode-toolbar-hoverBackground); /* Toolbar hover background color */
     border-radius: 3px; 
     transition: background-color 0.3s ease; 
 }
@@ -137,11 +137,11 @@
 .dropdown button {
     background: none;
     border: none;
-    color: #ffffff;
+    color: var(--vscode-editor-foreground); /* Editor foreground color */
     cursor: pointer;
 }
 
-.file__reference img{
+.file__reference img {
     margin: 3px 5px 3px 7px;
     height: 12px;
     width: 12px;
@@ -161,24 +161,24 @@
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Bottom shadow only */
 }
 
-.file__reference{
+.file__reference {
     display: flex;
     align-items: center;
     font-size: 11px;
     width: max-content;
-    border: 1px solid #686767a1;
+    border: 1px solid var(--vscode-editorLineNumber-foreground); /* Line number foreground color */
     border-radius: 5px;
     margin-left: 5px;
 }
 
-.file__reference span{
+.file__reference span {
     margin: 3px 5px;
 }
 
 .model_selection {
     position: relative;
-  }
-  
+}
+
 .model_selection button {
     display: flex;
     align-items: center;
@@ -186,55 +186,52 @@
     border: none;
     cursor: pointer;
 }
-  
-  .dropdown-menu {
+
+.dropdown-menu {
     position: absolute;
     top: -65px; 
     right: 0px;
-    background-color: #1f1f1f;
+    background-color: var(--vscode-dropdown-background); /* Dropdown background color */
     border-radius: 4px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     z-index: 1000;
     width: 100px;
     border-radius: 5px;
     padding: 5px;
-    border: 1px solid #686767a1;
-  }
-  
-  .dropdown-menu div {
+    border: 1px solid var(--vscode-dropdown-border); /* Dropdown border color */
+}
+
+.dropdown-menu div {
     font-size: 12px;
     padding: 10px;
     cursor: pointer;
     transition: background-color 0.2s;
     padding: 5px;
     border-radius: 5px;
-  }
-  
-  .dropdown-menu div:hover {
-    background-color: #0078d4;
-  }
+}
 
-  pre code.hljs{
+.dropdown-menu div:hover {
+    background-color: var(--vscode-dropdown-hoverBackground); /* Dropdown hover background color */
+}
+
+pre code.hljs {
     padding: 0.4rem 0.5rem 0.5rem 0.5rem !important;
-  }
+}
 
-
-  .login-button{
-    color: #ffffff;
+.login-button {
+    color: var(--vscode-button-foreground); /* Button foreground color */
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
     cursor: pointer;
     font-size: 11px !important;
     transition: background-color 0.3s ease;
-  }
+}
 
-
-  .disabled-icon {
+.disabled-icon {
     opacity: 0.5;
     pointer-events: none;
-  }
-
+}
 
 @media (max-width: 600px) {
     .footer__container {
