--- a/modus/src/components/Banner.css
+++ b/modus/src/components/Banner.css
@@ -4,25 +4,29 @@ body {
     background-color: var(--vscode-sideBar-background); /* Use the sidebar background color */
 }
 
-
-.banner{
+.banner {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     height: 100%;
-    padding :20px;
+    padding: 20px;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.logo{
+.logo {
     margin-top: 10%;
 }
 
-.logo img {
+.modus-logo {
+    display: block;
     width: 100px;
     height: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: var(--logo-filter, invert(0%)); /* Default to no inversion */
 }
 
 h1 {
