Fixed copy button

--- a/modus/src/components/Message.css
+++ b/modus/src/components/Message.css
@@ -59,6 +59,12 @@
   padding-bottom: 5px;
 }
 
+.code__header button{
+  outline: none !important;
+  border: none !important;
+  background: none !important;
+}
+
 .copy-icon {
   width: 16px; 
   height: 16px;
