--- a/modus/src/components/Footer.css
+++ b/modus/src/components/Footer.css
@@ -8,7 +8,7 @@
     bottom: 0; 
     left: 0;
     right: 0;
-    background-color: var(--vscode-sideBar-background);; /* Editor background color */
+    background-color: var(--vscode-sideBar-background); /* Editor background color */
     z-index: 10; 
     justify-content: center;
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
