--- a/modus/src/components/Message.css
+++ b/modus/src/components/Message.css
@@ -1,8 +1,8 @@
 .message__container {
   display: flex;
   flex-direction: column;
-  background-color: var(--vscode-editor-background); /* Editor background color */
-  border: 1px solid var(--vscode-editor-background); /* Editor background color */
+  background-color:  var(--vscode-sideBar-background);; /* Editor background color */
+  border: 1px solid var(--vscode-sideBar-background); /* Editor background color */
   padding: 10px;
   width: 100%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
